[package]
name = "tcp-clone"
version = "0.99.2"
authors = ["Bence SZIGETI <bence.szigeti@gohyda.com>"]
license = "MIT"
description = "TCP proxy server with ability to send the client upstream to observers."
edition = "2018"

[dependencies]
async-std = { version = "1.1.0", features = ["unstable"] }
serde = "1.0.102"
serde_derive = "1.0.102"
toml = "0.5.5"
