[package]
name = "tcp-clone"
version = "0.99.3"

description = "TCP proxy server with ability to send client up- and/or downstream to observer(s)."

authors = ["Bence SZIGETI <bence.szigeti@gohyda.com>"]

edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/benceszigeti/tcp-clone/"

[dependencies]
async-std = { version = "1.1.0", features = ["unstable"] }
clap = "2.33.0"
serde = "1.0.102"
serde_derive = "1.0.102"
toml = "0.5.5"
